[tool.poetry]
name = "gpx-linesman"
version = "0.1.2"
description = "Command line tool for measuring the straightness of a gpx track"
authors = ["burrscurr <burrscurr@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
exclude = ["gpx_linesman/tests"]

[tool.poetry.dependencies]
python = "^3.6"
geopy = "^2.0.0"
gpxpy = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pytest-cov = "^2.10.1"

[tool.poetry.scripts]
linesman = 'gpx_linesman:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
