[tool.poetry]
name = "gpx-linesman"
packages = [
    { include = "linesman" }
]
version = "0.2.0"
description = "Command line tool for measuring the straightness of a gpx track"
authors = ["burrscurr <burrscurr@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
geopy = "^2.0.0"
gpxpy = "^1.4.2"
importlib-metadata = {version = "^1.0", python = "<3.8"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pytest-cov = "^2.10.1"

[tool.poetry.scripts]
linesman = 'linesman:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
