[tool.poetry]
name = "gpx-linesman"
packages = [
    { include = "linesman" }
]
version = "0.3.0"
description = "Command line tool for measuring the straightness of a gpx track"
authors = ["burrscurr <burrscurr@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/burrscurr/linesman.git"
documentation = "https://linesman.readthedocs.io"
classifiers = [
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Scientific/Engineering :: GIS"
]

[tool.poetry.dependencies]
python = "^3.6"
gpxpy = "^1.4.2"
importlib-metadata = {version = "^1.0", python = "<3.8"}
geographiclib = "^1.50"
pyproj = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
sphinx = "^3.4.3"
sphinx-rtd-theme = "^0.5.1"
coveralls = "^3.0.0"

[tool.poetry.scripts]
linesman = 'linesman:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
